# THipster

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  demo.py  demo.thips  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  doc_update.yml  feature.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql.yml  issue-to-project.yml  merge-pr.yml  pr-checker.yml  pr-handler.yml  pr-labeler.yml  release.yml  stale-issue-pr-closer.yml
docs/source/: __init__.py  conf.py  index.rst
pipelines/: __init__.py  automated_tests.py  base.py  pre-commit.py  precommit.py  prhandler.py  release.py  test.py
requirements/: dagger-requirements.txt  requirements-dev.txt  requirements-doc.txt  requirements-google.txt  requirements-test.txt
scripts/: docs.sh  init-dev.sh  test-cov-html.sh  test.sh
tests/: __init__.py  test_e2e.py  test_tools.py
tests/engine/: __init__.py  engine_test.py  test_engine.py  test_generation.py  test_parsedfile.py  test_resourcemodel.py
tests/parser/: parsedfile_test.py  test_ParserFactory.py  test_YAMLParser.py  test_parsedfile.py  test_parserfactory.py  test_yamlparser.py
tests/parser/dsl_parser/: __init__.py  test_DSLparser.py  test_ast.py  test_dslparser.py  test_lexer.py  test_token.py  test_tokenparser.py
tests/repository/: __init__.py  test_github_repository.py  test_local_repository.py  test_resourcemodel.py
tests/resources/: create_buckets.json  create_buckets.thips  demo.thips
tests/resources/e2e/models/: backend.json  backend_service.json  bucket.json  bucket_bad_dep_child.json  bucket_bad_dep_child_cyclic.json  bucket_bad_dep_cyclic.json  bucket_bad_dep_parent.json  bucket_cors.json  firewall.json  (+15 more)
thipster/: __init__.py  demo.py  helpers.py  main.py
thipster/auth/: Google.py  __init__.py  google.py
thipster/engine/: Engine.py  I_Auth.py  I_Parser.py  I_Repository.py  I_Terraform.py  ParsedFile.py  ResourceModel.py  __init__.py  engine.py  exceptions.py  i_auth.py  i_parser.py  i_repository.py  i_terraform.py  parsed_file.py  resource_model.py
thipster/parser/: ParserFactory.py  YAMLParser.py  __init__.py  exceptions.py  parser_factory.py  yaml_parser.py
thipster/parser/dsl_parser/: AST.py  DSLParser.py  Interpreter.py  Lexer.py  LexerPosition.py  Token.py  TokenParser.py  __init__.py  ast.py  exceptions.py  grammar.ebnf  interpreter.py  lexer.py  lexer_position.py  parser.py  token.py  token_parser.py
thipster/repository/: GithubRepo.py  JSONRepo.py  LocalRepo.py  __init__.py  exceptions.py  github.py  json.py  local.py
thipster/terraform/: CDK.py  __init__.py  cdk.py  exceptions.py
(+3 files in other folders)
