[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thipster"
authors = [
    {name = "rcattin", email = "rafa.cattin+thipster@gmail.com"},
    {name = "gsuquet", email = "gsuquet@ippon.fr"},
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/THipster/THipster.git"
Changelog = "https://github.com/THipster/THipster/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

testpaths = [
    "tests",
    "integration",
]

[tool.semantic_release]
version_variable = "setup.py:__version__"
branch = "main"
commit_parser = "semantic_release.history.emoji_parser"

major_emoji = ":boom:"
minor_emoji = ":sparkles:"
patch_emoji = ":ambulance:,:bug:,:adhesive_bandage:,:lock:,:arrow_up:,:arrow_down:,:heavy_plus_sign:,:heavy_minus_sign:,:rotating_light:,:zap:,:recycle:,:wrench:,:loud_sound:,:mute:,:goal_net:,:wastebasket:,:coffin:,:chart_with_upwards_trend:,:globe_with_meridians:,:alien:,:wheelchair:,:children_crossing:,:bricks:"

repository_url = "https://upload.pypi.org/legacy/"

commit_subject = ":bookmark: {version}"
major_on_zero = false

[pytest]
mock_use_standalone_module = true
